2010-07-12  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Dirk Schulze.

        [Cairo] Incorrect Test for Text Fill
        https://bugs.webkit.org/show_bug.cgi?id=42123

        Unskip tests which cover text stroking and add pixel dump results for
        them via the GTK+ port.

        * platform/gtk/Skipped: Unskip passing tests.
        * platform/gtk/fast/text/stroking-decorations-expected.checksum: Added.
        * platform/gtk/fast/text/stroking-decorations-expected.png: Added.
        * platform/gtk/fast/text/stroking-decorations-expected.txt: Added.
        * platform/gtk/fast/text/stroking-expected.checksum: Added.
        * platform/gtk/fast/text/stroking-expected.png: Added.
        * platform/gtk/fast/text/stroking-expected.txt: Added.

2010-07-12  Martin Robinson  <mrobinson@igalia.com>

        Unreviewed.

        Fix a small error in the Skipped list.

        * platform/gtk/Skipped:

2010-07-12  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: rebaseline chromium tests.

        * platform/chromium-win-xp/fast/gradients/radial-centered-expected.checksum: Copied from LayoutTests/platform/chromium-win/fast/gradients/radial-centered-expected.checksum.
        * platform/chromium-win-xp/fast/gradients/radial-centered-expected.png: Copied from LayoutTests/platform/chromium-win/fast/gradients/radial-centered-expected.png.
        * platform/chromium-win-xp/fast/gradients/radial-centered-expected.txt: Copied from LayoutTests/platform/chromium-win/fast/gradients/radial-centered-expected.txt.
        * platform/chromium/test_expectations.txt:

2010-07-12  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by David Levin.

        Add failing animation and canvas tests to WebKit2 Skipped list
        https://bugs.webkit.org/show_bug.cgi?id=42141

        * platform/mac-wk2/Skipped:

2010-07-12  Eric Seidel  <eric@webkit.org>

        Reviewed by Sam Weinig.

        Fix a typo in the adoption agency causing test failures