@@ -5179,7 +5179,7 @@ resources/tables01.dat:
 8
 9
 
-Test 3 of 15 in resources/tables01.dat failed. Input:
+Test 3 of 16 in resources/tables01.dat failed. Input:
 <table><col foo='bar'>
 Got:
 | <html>
@@ -5197,7 +5197,7 @@ Expected:
 |         <col>
 |           foo="bar"
 
-Test 7 of 15 in resources/tables01.dat failed. Input:
+Test 7 of 16 in resources/tables01.dat failed. Input:
 <table><select><option>3</select></table>
 Got:
 | <html>
@@ -5217,7 +5217,7 @@ Expected:
 |         "3"
 |     <table>
 
-Test 8 of 15 in resources/tables01.dat failed. Input:
+Test 8 of 16 in resources/tables01.dat failed. Input:
 <table><select><table></table></select></table>
 Got:
 | <html>
@@ -5235,7 +5235,7 @@ Expected:
 |     <table>
 |     <table>
 
-Test 9 of 15 in resources/tables01.dat failed. Input:
+Test 9 of 16 in resources/tables01.dat failed. Input:
 <table><select></table>
 Got:
 | <html>
@@ -5250,3 +5250,4 @@ Expected:
 |   <body>
 |     <select>
 |     <table>
+resources/whitespace01.dat: PASS
