@@ -2,6 +2,16 @@
 
         Reviewed by Adam Barth.
 
+        Fix typo in "close the cell" which caused assertion
+        https://bugs.webkit.org/show_bug.cgi?id=42138
+
+        * html/HTMLTreeBuilder.cpp:
+        (WebCore::HTMLTreeBuilder::closeTheCell):
+
+2010-07-12  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Adam Barth.
+
         Fix line number handling in HTMLTreeBuilder to fix a zillion layout tests
         https://bugs.webkit.org/show_bug.cgi?id=42143
 
